...

        <FrameLayout
            android:id="@+id/frame_layout_button_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector">

            <ImageView
                android:id="@+id/button_edit"
                android:layout_width="15dp"
...
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <EditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            android:inputType="numberDecimal"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout">

            <Button
                android:id="@+id/add_foodstuff_button"
                style="@style/VioletButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_foodstuff"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
...
