...
        Белки - %2$.1f\n
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
...
